--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
 	"scripts": {
 		"dev": "vite",
 		"build": "tsc && vite build",
-		"preview": "vite preview"
+		"preview": "vite preview",
+		"test": "vitest"
 	},
 	"devDependencies": {
+		"@types/node": "20.0.0",
 		"typescript": "^5.2.2",
-		"vite": "^5.2.0"
+		"vite": "^5.2.0",
+		"vitest": "^1.5.0"
 	},
 	"repository": {
 		"type": "git",
