--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
 		"@types/node": "20.0.0",
 		"typescript": "^5.2.2",
 		"vite": "^5.2.0",
-		"vitest": "^1.5.0"
+		"vitest": "^1.5.0",
+		"vitest-fetch-mock": "^0.2.2"
 	},
 	"repository": {
 		"type": "git",
