--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 	},
 	"devDependencies": {
 		"@types/node": "20.0.0",
+		"dotenv": "^16.4.5",
 		"typescript": "^5.2.2",
 		"vite": "^5.2.0",
 		"vitest": "^1.5.0",
