--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,15 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
+    "esModuleInterop": true,
+    "preserveConstEnums": true,
+    "target": "es2022",
     "useDefineForClassFields": true,
-    "module": "ESNext",
-    "lib": ["ES2020", "DOM", "DOM.Iterable"],
+    "module": "esnext",
+    "lib": ["es2022","es2020", "DOM", "DOM.Iterable"],
     "skipLibCheck": true,
-
+    "outDir": "dist",
+    "types": ["node"],
+    "rootDir": "src/",
     /* Bundler mode */
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
@@ -19,5 +23,7 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src"]
+ "include": ["src/**/*"],
+  "exclude": ["node_modules"],
+  
 }
