--- a/package.json
+++ b/package.json
@@ -6,18 +6,16 @@
 	"type": "module",
 	"scripts": {
 		"dev": "tsc src/index.ts",
-		"build": "tsc && vite build",
-		"preview": "vite preview",
+		"build": "tsup",
 		"test": "vitest run",
 		"test:watch": "vitest"
 	},
 	"devDependencies": {
 		"@types/node": "20.0.0",
 		"dotenv": "^16.4.5",
+		"tsup": "^8.0.2",
 		"typescript": "^5.2.2",
-		"vite": "^5.2.0",
-		"vitest": "^1.5.0",
-		"vitest-fetch-mock": "^0.2.2"
+		"vitest": "^1.5.0"
 	},
 	"repository": {
 		"type": "git",
