--- a/package.json
+++ b/package.json
@@ -2,8 +2,11 @@
 	"name": "cloudflare-images-client",
 	"version": "1.0.0",
 	"description": "Complete wrapper around cloudflare images api",
-	"main": "src/index",
 	"type": "module",
+	"main": "./dist/index.js",
+	"module": "./dist/index.mjs",
+	"types": "./dist/index.d.ts",
+	"files": ["dist"],
 	"scripts": {
 		"dev": "tsc src/index.ts",
 		"build": "tsup",
