--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
 		"dev": "tsc src/index.ts",
 		"build": "tsup",
 		"test": "vitest run",
-		"test:watch": "vitest"
+		"test:watch": "vitest",
+		"coverage": "vitest run --coverage"
 	},
 	"devDependencies": {
 		"@types/node": "20.0.0",
+		"@vitest/coverage-v8": "^1.5.0",
 		"dotenv": "^16.4.5",
 		"tsup": "^8.0.2",
 		"typescript": "^5.2.2",
