--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "cloudflare-images-client",
-	"version": "1.1.2",
+	"version": "1.1.3",
 	"description": "Complete wrapper around cloudflare images api",
 	"type": "module",
 	"main": "./dist/index.js",
@@ -12,9 +12,11 @@
 		"build": "tsup",
 		"test": "vitest run",
 		"test:watch": "vitest",
-		"coverage": "vitest run --coverage"
+		"coverage": "vitest run --coverage",
+		"format": "npx @biomejs/biome format --write ./src/*"
 	},
 	"devDependencies": {
+		"@biomejs/biome": "1.7.0",
 		"@types/node": "20.0.0",
 		"@vitest/coverage-v8": "^1.5.0",
 		"dotenv": "^16.4.5",
