add upload image from file

--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
 		},
 		{
 			"name": "Dimitris Pattas",
-			"email": "jane.smith@example.com",
+			"email": "dimitris.pattas.dev@gmail.com",
 			"url": "https://github.com/DimitrisPattas"
 		}
 	],
