feat: Add MSW to intercept API request for testing

--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
 	"main": "./dist/index.js",
 	"module": "./dist/index.cjs",
 	"types": "./dist/index.d.ts",
-	"files": ["dist"],
+	"files": [
+		"dist"
+	],
 	"scripts": {
 		"dev": "tsc src/index.ts",
 		"build": "tsup",
@@ -20,6 +22,7 @@
 		"@types/node": "20.0.0",
 		"@vitest/coverage-v8": "^1.5.0",
 		"dotenv": "^16.4.5",
+		"msw": "^2.3.0",
 		"tsup": "^8.0.2",
 		"typescript": "^5.2.2",
 		"vitest": "^1.5.0"
