--- a/package.json
+++ b/package.json
@@ -1,14 +1,12 @@
 {
 	"name": "cloudflare-images-client",
-	"version": "1.1.4",
+	"version": "1.1.5",
 	"description": "Complete wrapper around cloudflare images api",
 	"type": "module",
 	"main": "./dist/index.js",
 	"module": "./dist/index.cjs",
 	"types": "./dist/index.d.ts",
-	"files": [
-		"dist"
-	],
+	"files": ["dist"],
 	"scripts": {
 		"dev": "tsc src/index.ts",
 		"build": "tsup",
