--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
 		"test": "vitest run",
 		"test:watch": "vitest",
 		"coverage": "vitest run --coverage",
-		"format": "npx @biomejs/biome format --write ./src/*"
+		"format": "npx @biomejs/biome format --write ./src/*",
+		"publish": "npm publish"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.7.0",
